# pdf_seeker

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  prompt.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.svelte  app.css  main.ts  pdfjs-dist.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: config.rs  mod.rs  pdf_ops.rs  recent.rs  s3_ops.rs
src-tauri/src/config/: mod.rs
src/lib/: pdf-engine.ts
src/lib/components/layout/: Sidebar.svelte  Toolbar.svelte  index.ts
src/lib/components/ui/: Button.svelte  Input.svelte  Label.svelte  Separator.svelte  Tooltip.svelte  index.ts
src/lib/i18n/: index.svelte.ts
src/lib/i18n/locales/: en.json  zh.json
src/lib/stores/: index.ts
src/lib/types/: index.ts
src/views/: Home.svelte  Settings.svelte  Storage.svelte  Tools.svelte  Viewer.svelte  index.ts
